Fixed Welcome page stretch with long QueueDrawer.

--- a/src/Pages/Welcome/Welcome.module.css
+++ b/src/Pages/Welcome/Welcome.module.css
@@ -1,16 +1,12 @@
 .container {
   min-height: 100vh;
-  flex:auto;
-}
-  
-.welcome {
-  min-height: 100vh;
   background-image: url('./ries-bosch-q1cRvBSvw3M-unsplash.jpg');
-  background-size: 100% 100%;
+  background-size: 100% 100%;  
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex:auto;
 }
   
 .welcometext {
@@ -18,10 +14,12 @@
   font-family: 'Sigmar One';
   font-size: 150px;
   -webkit-text-stroke: 5px black;
+  margin-top: 300px;
+  flex-grow: 1;
 }
 
 .poweredby {
-  margin-top: 40px;
+  margin-bottom: 40px;
   display: flex;
   align-items: center;
 }
